[tool.poetry]
name = "poesyn-api"
version = "0.1.0"
description = ""
authors = ["Nick Walton <nicholas.h.walton@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
"flask" = "^1.1.1"
flask-cors = "^3.0.8"
pandas = "1.0.1"
defusedxml = "0.6.0"
requests = "2.23.0"
expiringdict = "1.2.0"
waitress = "1.4.3"
bs4 = "0.0.1"
gspread = "^5.3.2"
oauth2client = "^4.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
